--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -72,7 +72,7 @@
 
     {% block footer %}
     <footer class="footer">Все права защищены!<br>
-      &#169; Терехов Михаил 2021
+      &#169; Андроген 2023
     </footer>
     {% endblock footer %}
   </div>
