--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1,23 +1,23 @@
 /* Обнуление */
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 
 html,
 body,
 .wrapper {
-  height: 100%;
-  font-family:monospace;
+    height: 100%;
+    font-family: monospace;
 
 }
 
 
 /* Пустой блок, используется временно */
-.empty_block{
-    height:50px;
+.empty_block {
+    height: 50px;
 }
 
 
@@ -40,9 +40,10 @@ body,
     height: 30px;
 
 }
-.main_menu a{
-text-decoration: none;
-color: mediumaquamarine;
+
+.main_menu a {
+    text-decoration: none;
+    color: mediumaquamarine;
 }
 
 
@@ -65,14 +66,14 @@ color: mediumaquamarine;
 
 
 /* MAIN_MENU */
-.main_menu{
+.main_menu {
     display: flex;
     justify-content: flex-end;
 }
 
 
 /* MAIN_PAGE */
-.wrapper{
+.wrapper {
     display: flex;
     flex-direction: column;
 
@@ -147,22 +148,40 @@ ul .checkmark:before {
 
 
 /* BLOCK_CONTENT */
-.content{
+.content {
     width: 50%;
     margin: 0 auto;
     flex: 1 0 auto;
 
 }
 
+.content-section {
+    display: flex;
+    weight: 100%;
+    justify-content: space-between;
+    margin: 50px auto 0;
+}
 
-.update_info{
+.card {
+    text-align: center;
+    align-items: center;
+    width: 300px;
+    border: none;
+}
+
+.account-img {
+    width: 200px;
+    border-radius: 50px;
+}
+
+.update_info {
     text-align: center;
     width: 300px;
 }
 
 
 /* LOGIN_FORM */
-.register_form{
+.register_form {
     height: 200px;
     margin: 0 auto;
     margin: 100px 0;
@@ -191,7 +210,7 @@ ul .checkmark:before {
 
 /* FORM and BUTTON */
 
-.form-post-title{
+.form-post-title {
     width: 100%;
     height: 40px;
     border-radius: 10px;
@@ -199,13 +218,13 @@ ul .checkmark:before {
 }
 
 
-input[placeholder]{
+input[placeholder] {
     padding-left: 10px;
     font-size: 16px;
 }
 
 
-.btn_sign_in{
+.btn_sign_in {
     width: 120px;
     height: 30px;
     background-color: white;
@@ -214,8 +233,8 @@ input[placeholder]{
 }
 
 
-.form-group_button{
-    display:flex;
+.form-group_button {
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -225,4 +244,3 @@ input[placeholder]{
     color: red;
     margin-right: 10px;
 }
-
