add error and mail_send

--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -2,8 +2,13 @@
 
 {% block content %}
 
-<div class="blog_content_area">
+<!-- {% if nothing %}
+<h1 style="text-align: center">Пока постов нет </h1>
+{% else %} -->
 
+
+
+<div class="blog_content_area">
 
     <div class="blog_content">
         {% for post in posts.items %}
