--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -9,8 +9,8 @@
                 <img src="{{ url_for('static', filename='profile_pics/' + post.author.username + '/account_img/' + post.author.image_file) }}"
                     alt="" class="mr-3 mt-3 rounded-circle" style="width:40px;">
 
-                <a class="mr-2" href="{{ url_for('users.user_posts', username=post.author.username)}}">{{
-                    post.author.username }}</a>
+                <a class="mr-2" href="{{ url_for('users.user_posts', username=post.author.username) }}">
+                    {{ post.author.username }}</a>
                 <small class="text-muted">{{ post.date_posted.strftime('%d.%m.%Y-%H.%M') }}</small>
                 {% if post.author == current_user %}
             </div>
