--- a/blog/templates/user_posts.html
+++ b/blog/templates/user_posts.html
@@ -3,13 +3,11 @@
 {% block content %}
 <div class="wrapper_content">
 
-
     <h3>
         <img src="{{ url_for('static', filename='profile_pics/' + user.username + '/' + 'account_img/' + user.image_file) }}"
             alt="" class="mr-3 mt-3 rounded-circle" style="width:40px;">
 
-        <a class="mr-2" href="{{ url_for('users.user_posts', username=user.username)}}">{{ user.username }}</a>({{
-        posts.total }})
+        <a class="mr-2" href="{{ url_for('user.user_posts', username=user.username)}}">{{ user.username }}</a>({{ posts.total }})
     </h3>
 
     {% for post in posts.items %}
@@ -35,11 +33,11 @@
         {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=3) %}
         {% if page_num %}
         {% if posts.page == page_num %}
-        <a class="btn btn-info mb-4" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{
+        <a class="btn btn-info mb-4" href="{{ url_for('user.user_posts', username=user.username, page=page_num) }}">{{
             page_num }}</a>
         {% else %}
         <a class="btn btn-outline-success mb-4"
-            href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
+            href="{{ url_for('user.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
         {% endif %}
         {% else %}
         ...
