--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -3,244 +3,470 @@
 * {
     margin: 0;
     padding: 0;
-}
-
-
-html,
-body,
-.wrapper {
+  }
+  
+  
+  html,
+  body,
+  .wrapper {
     height: 100%;
-    font-family: monospace;
-
-}
-
-
-/* Пустой блок, используется временно */
-.empty_block {
-    height: 50px;
-}
-
-
-/* HEADER */
-.header {
-    height: 160px;
-    background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
-    padding-right: 50px;
-}
-
-
-.main_menu li {
-    display: flex;
-    width: 150px;
-    justify-content: center;
-    border-radius: 100px;
-    margin-top: 6%;
-    box-shadow: 10px 10px 10px grey;
-    font-size: 20px;
-    height: 30px;
-
-}
-
-.main_menu a {
-    text-decoration: none;
-    color: mediumaquamarine;
-}
-
-
-.header li:hover {
-    transition-duration: 0.5s;
-    box-shadow: 4px 5px 50px grey;
-}
-
-
-/* LOGO */
-.logo img {
-    float: left;
-    margin-left: 100px;
-    background-image: url("/img/ioA6tYaKRbU.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 200px;
-    box-shadow: 0px 0px 0px lightgreen;
-}
-
-
-/* MAIN_MENU */
-.main_menu {
-    display: flex;
-    justify-content: flex-end;
-}
-
-
-/* MAIN_PAGE */
-.wrapper {
-    display: flex;
-    flex-direction: column;
-
-}
-
-
-.cascade_block {
-    display: flex;
-    margin: 0px auto 0px;
-    width: 80%;
-    box-shadow: -5px 15px 10px skyblue;
-    border-radius: 200px;
-}
-
-
-.cascade_menu {
-    font-size: 35px;
-    margin: 0 auto;
-    padding: 0px 0;
-    text-align: right;
-}
-
-
-.info_name {
-    box-shadow: -5px 15px 10px skyblue;
-    border-radius: 200px;
-    padding: 10px 20px;
-    letter-spacing: 3px;
-}
-
-
-
-.cascade_block_li {
-    width: 100%;
-    font-weight: 600;
-    color: dodgerblue;
-    margin: 0 auto;
-    text-align: center;
-    box-shadow: 0px 0px 0px skyblue;
-    border-radius: 200px;
-
-}
-
-.cascade_block_li .checkmark {
-    margin-bottom: 10px;
-    font-style: normal;
-    box-shadow: 5px 3px 10px grey;
-    font-size: 25px;
-    padding: 5px;
-    border-radius: 200px;
-    letter-spacing: 2px;
-    list-style: none;
-}
-
-
-ul .checkmark:before {
-    content: "\2713\0020";
-    color: forestgreen;
-}
-
-
-.checkmark a {
-    text-decoration: none;
-    color: mediumaquamarine;
-}
-
-
-.checkmark:hover {
-    transition-duration: 0.1s;
-    box-shadow: 0px 12px 10px orange;
-}
-
-
-/* BLOCK_CONTENT */
-.content {
-    width: 50%;
-    margin: 0 auto;
-    flex: 1 0 auto;
-
-}
-
-.content-section {
-    display: flex;
-    weight: 100%;
-    justify-content: space-between;
-    margin: 50px auto 0;
-}
-
-.card {
-    text-align: center;
-    align-items: center;
-    width: 300px;
-    border: none;
-}
-
-.account-img {
-    width: 200px;
-    border-radius: 50px;
-}
-
-.update_info {
-    text-align: center;
-    width: 300px;
-}
-
-
-/* LOGIN_FORM */
-.register_form {
-    height: 200px;
-    margin: 0 auto;
-    margin: 100px 0;
-    align-items: center;
-    text-align: center;
-}
-
-
-.legend {
-    font-size: 25px;
-    margin-bottom: 20px;
-}
-
-
-/* FOOTER */
-.footer {
-    display: flex;
-    height: 100px;
-    background-color: antiquewhite;
-    align-items: center;
-    justify-content: center;
-    font-size: 15px;
-    flex: 0 0 auto;
-}
-
-
-/* FORM and BUTTON */
-
-.form-post-title {
-    width: 100%;
-    height: 40px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-}
-
-
-input[placeholder] {
-    padding-left: 10px;
-    font-size: 16px;
-}
-
-
-.btn_sign_in {
-    width: 120px;
-    height: 30px;
-    background-color: white;
-    margin-top: 10px;
-    border-radius: 10px;
-}
-
-
-.form-group_button {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.text-muted {
-    font-size: 15px;
-    color: red;
-    margin-right: 10px;
-}
+    font-family:monospace;
+  
+  }
+  
+  
+  /* Пустой блок, используется временно */
+  .empty_block{
+      height:30px;
+  }
+  
+  
+  /* HEADER */
+  .header {
+      height: 160px;
+      background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
+      padding-right: 50px;
+  }
+  
+  
+  .main_menu li {
+      display: flex;
+      width: 150px;
+      justify-content: center;
+      border-radius: 100px;
+      margin-top: 6%;
+      box-shadow: 10px 10px 10px grey;
+      font-size: 20px;
+      height: 30px;
+  
+  }
+  .main_menu a{
+  text-decoration: none;
+  color: mediumaquamarine;
+  }
+  
+  
+  .header li:hover {
+      transition-duration: 0.5s;
+      box-shadow: 4px 5px 50px grey;
+  }
+  
+  
+  /* LOGO */
+  .logo img {
+      float: left;
+      margin-left: 100px;
+      background-image: url("/img/ioA6tYaKRbU.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      width: 200px;
+      box-shadow: 0px 0px 0px lightgreen;
+  }
+  
+  
+  /* MAIN_MENU */
+  .main_menu{
+      display: flex;
+      justify-content: flex-end;
+  }
+  
+  
+  /* MAIN_PAGE */
+  .wrapper{
+      display: flex;
+      flex-direction: column;
+  
+  
+  }
+  
+  
+  .cascade_block {
+      display: flex;
+      margin: auto auto;
+      width: 80%;
+      box-shadow: -5px 15px 10px skyblue;
+      border-radius: 200px;
+  }
+  
+  
+  .cascade_menu {
+      font-size: 35px;
+      margin: 0 auto;
+      padding: 0px 0;
+      text-align: right;
+  }
+  
+  
+  .info_name {
+      box-shadow: -5px 15px 10px skyblue;
+      border-radius: 200px;
+      padding: 10px 20px;
+      letter-spacing: 3px;
+  }
+  
+  
+  
+  .cascade_block_li {
+      width: 100%;
+      font-weight: 600;
+      color: dodgerblue;
+      margin: 0 auto;
+      text-align: center;
+      box-shadow: 0px 0px 0px skyblue;
+      border-radius: 200px;
+  
+  }
+  
+  .cascade_block_li .checkmark {
+      margin-bottom: 10px;
+      font-style: normal;
+      box-shadow: 5px 3px 10px grey;
+      font-size: 25px;
+      padding: 5px;
+      border-radius: 200px;
+      letter-spacing: 2px;
+      list-style: none;
+  }
+  
+  
+  ul .checkmark:before {
+      content: "\2713\0020";
+      color: forestgreen;
+  }
+  
+  
+  .checkmark a {
+      text-decoration: none;
+      color: mediumaquamarine;
+  }
+  
+  
+  .checkmark:hover {
+      transition-duration: 0.1s;
+      box-shadow: 0px 12px 10px orange;
+  }
+  
+  
+  /* BLOCK_CONTENT */
+  .content{
+      width: 80%;
+      align-items: center;
+      margin: 0 auto;
+      flex: 1 0 auto;
+  
+  }
+  
+  
+  .update_info{
+      text-align: center;
+      width: 300px;
+  }
+  
+  
+  /* LOGIN_FORM */
+  .register_form{
+      height: 200px;
+      align-items: center;
+      text-align: center;
+  }
+  
+  
+  .legend {
+      font-size: 25px;
+      margin-bottom: 20px;
+  }
+  
+  
+  /* FOOTER */
+  .footer {
+      display: flex;
+      height: 100px;
+      background-color: antiquewhite;
+      align-items: center;
+      justify-content: center;
+      font-size: 15px;
+      flex: 0 0 auto;
+  }
+  
+  
+  /* FORM and BUTTON */
+  .form-post-title{
+      width: 100%;
+      height: 40px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+  }
+  
+  input,
+  input[placeholder]{
+      padding-left: 10px;
+      font-size: 16px;
+  
+  }
+  
+  
+  .form-post-textarea{
+      width: 100%;
+      height: 260px;
+      border-radius: 10px;
+  }
+  
+  
+  textarea[placeholder]{
+      padding-left: 10px;
+      padding-top: 10px;
+      font-size: 16px;
+  }
+  
+  
+  .btn_new_post{
+      width: 120px;
+      height: 30px;
+      background-color: white;
+      margin-top: 10px;
+      border-radius: 10px;
+  
+  }
+  
+  .btn_sign_in{
+      width: 120px;
+      height: 30px;
+      background-color: white;
+      margin-top: 10px;
+      border-radius: 10px;
+  }
+  
+  
+  .btn_log_in{
+      width: 120px;
+      height: 30px;
+      background-color: white;
+      margin-top: 10px;
+      border-radius: 10px;
+  
+  }
+  
+  .create_post_btn{
+      padding: 10px 20px;
+      weight: 250px;
+      border-radius: 20px;
+      background-color: white;
+      margin-bottom: 20px;
+  
+  
+  }
+  
+  .create_post_btn a{
+      text-decoration:none;
+      background-color: white;
+  
+  }
+  
+  
+  
+  .form-group_button{
+      display:flex;
+      justify-content: space-between;
+      align-items: center;
+  }
+  
+  
+  .text-muted {
+      font-size: 15px;
+      color: red;
+      margin-right: 10px;
+  }
+  
+  
+  .content-section{
+      display: flex;
+      weight: 100%;
+      justify-content: space-between;
+      margin: 50px auto 0;
+  }
+  
+  
+  .update_info{
+      text-align: center;
+      width: 300px;
+  
+  }
+  
+  
+  .card{
+      text-align: center;
+      align-items: center;
+      width: 300px;
+      border :none;
+  }
+  
+  
+  .account-img{
+      width:200px;
+      border-radius: 50px;
+  }
+  
+  
+  .blog_content_area{
+  display: flex;
+  }
+  
+  .blog_content{
+      width: 60%;
+      text-align: center;
+      margin: 40px auto;
+  }
+  
+  .info_posts_user h4{
+      display: flex;
+      height: 60px;
+      padding: 10px 15px;
+      background-color: lightblue;
+      align-items: center;
+  }
+  
+  
+  .info_posts_user{
+      margin-top:60px;
+      text-align: center;
+  }
+  
+  
+  
+  .new_post,
+  .log_in,
+  .sign_in,
+  .reset_pass,
+  .reset_token{
+      width: 60%;
+      margin: 100px auto;
+      text-align:center;
+  
+  }
+  
+  .test{
+      margin: 0 auto;
+      outline: green 1px solid;
+      text-align: center;
+  
+  }
+  
+  .form-check{
+      text-align: left;
+  }
+  
+  
+  .pad_top_card{
+      padding-top: 50px;
+  }
+  
+  
+  .wrapper_content{
+      margin: 100px auto;
+      text-align: center;
+  }
+  
+  
+  .info_user_blog{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+  
+  
+  }
+  
+  
+  .posts_blog{
+      text-align: left;
+      margin-left: 20px;
+      margin-bottom: 30px;
+      font-size: 14px;
+  
+  }
+  
+  
+  .posts_blog h2 a{
+      color: green;
+      text-decoration: none;
+  
+  }
+  
+  .info_user_blog_left img{
+      outline: orange 1px solid;
+      box-shadow: 2px 2px 12px 9px lightgrey;
+      margin-right: 20px;
+  
+  }
+  
+  
+  .info_user_blog_left a{
+      text-decoration: none;
+      color: grey;
+  }
+  
+  
+  .info_user_blog_right {
+      font-size: 14px;
+  
+  }
+  
+  
+  .user_post{
+      text-align: center;
+      margin: 40px auto;
+      width: 60%;
+  }
+  
+  
+  .user_info_single_post{
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 10px;
+  }
+  
+  
+  .online_status{
+      height: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+  
+  
+  
+  
+  }
+  
+  
+  .online_user{
+  
+      width:13px;
+      height:13px;
+      background-color: green;
+      border-radius: 200px;
+      text-align: right;
+      box-shadow: 0px 0px 20px 3px green;
+  
+  
+  
+  }
+  
+  
+  
+  .current_user{
+      text-align: right;
+      color: blue;
+      margin-left: 10px;
+      align-self: center;
+  
+  
+  
+  }
+  
+  .current_user small{
+      font-style: cursive;
+      color: blue;
+      font-size: 16px;
+  
+  }
