add search and tags

--- a/blog/main/templates/main/index.html
+++ b/blog/main/templates/main/index.html
@@ -8,7 +8,7 @@
     <div class="cascade_block">
 
         <div class="cascade_menu">
-            <p class="info_name">Mike do IT - fullstack разработка</p>
+            <p class="info_name">Androgen - fullstack разработка</p>
 
             <div class="cascade_block_li">
                 <ul>
