--- a/blog/user/templates/user/user_posts.html
+++ b/blog/user/templates/user/user_posts.html
@@ -4,37 +4,42 @@
 <div class="wrapper_content">
 
 
-    <h3>
-        <img src="{{ url_for('static', filename='profile_pics/' + user.username + '/' + 'account_img/' + user.image_file) }}"
-             alt="" class="mr-3 mt-3 rounded-circle" style="width:40px;">
-
-        <a class="mr-2" href="{{ url_for('user.user_posts', username=user.username)}}">{{ user.username }}</a>({{ posts.total }})</h3>
-
+    <div class="user_posts">
+        <div class="user_info">
+            <div class="user_img_info">
+                <img src="{{ url_for('static', filename='profile_pics/' + 'users/' + user.username + '/' + 'account_img/' + user.image_file) }}"
+                     alt="" class="mr-3 mt-3 rounded-circle">
+            </div>
+            <div class="user_username_info">
+                <a class="mr-2" href="{{ url_for('users.user_posts', username=user.username)}}">{{ user.username }}</a>({{ posts.total }})
+            </div>
+        </div>
 {% for post in posts.items %}
 
 
 <div class="post">
 
 
-    <h2><a class="article-title" style="font-size: 20px;" href="{{ url_for('post.post', post_id=post.id) }}">{{ post.title }}</a></h2>
+    <h2><a class="article-title" style="font-size: 20px;" href="{{ url_for('posts.post', slug=post.slug) }}">{{ post.title }}</a></h2>
 
 </div>
 
 
-
 {% endfor %}
-<br>
+
+        </div>
+
             <a href="{{ url_for( 'main.blog' ) }}">Вернуться к блогу</a>
-<br>
-<br>
+        <hr>
+
 <div class="post_paginate">
 
     {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=3) %}
         {% if page_num %}
             {% if posts.page == page_num %}
-            <a class="btn btn-info mb-4" href="{{ url_for('user.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
+            <a class="btn btn-info mb-4" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
             {% else %}
-            <a class="btn btn-outline-success mb-4" href="{{ url_for('user.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
+            <a class="btn btn-outline-success mb-4" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
             {% endif %}
         {% else %}
             ...
