--- a/blog/post/templates/post/create_post.html
+++ b/blog/post/templates/post/create_post.html
@@ -5,24 +5,28 @@
     <form action="" class="form_sign_in" enctype="multipart/form-data" method="POST">
 
 
-        {{ form.hidden_tag() }}
+        {{ form_new_post.hidden_tag() }}
 
         <legend class="legend">{{ legend }}</legend>
 
 
         <div class="invalid-feedback">
-            {% for errors in form.title.errors %}
+            {% for errors in form_new_post.title.errors %}
             <span>{{ error }}</span>
             {% endfor %}
         </div>
 
-        {{ form.title(class='form-post-title', placeholder='Заголовок') }}
 
-        {{ form.content(class='form-post-textarea', placeholder='Текст статьи') }}
-        {{ form.picture }}
+        {{ form_new_post.title(class='form-post-title', placeholder='Заголовок') }}
+        {{ form_new_post.content(class='form-post-textarea', placeholder='Текст статьи') }}
+        {{ form_new_post.tag_form(style='width:750px; color: blue; font-size: 18px;', placeholder='Несколько тегов через /')}}
+        Выберите рубрику поста {{ form_new_post.category(style='wight:500px; color: blue; font-size: 18px;')}}
+        {{ form_new_post.picture }}
 
 
-        {{ form.submit(class='btn_new_post') }}
+
+
+        {{ form_new_post.submit(class='btn_new_post') }}
 
     </form>
 </div>
