--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -4,9 +4,9 @@
 
   <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='icon/favicon.ico') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/reset.css')}}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-            <link rel="stylesheet" href="{{ url_for('static', filename='css/media_css.css')}}">
                 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
 
 
@@ -25,36 +25,28 @@
 <header class="header">
 
     <div class="logo">
-        <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo">
+        <img src="{{ url_for('static', filename='img/logo.jpg') }}" alt="logo">
 
     </div>
 
-    <ul class="main_menu">
-{% if current_user.is_authenticated %}
+
+    {% include 'menu.html' %}
 
 
-        <li><a href="{{ url_for('main.home') }}">Главная</a></li>
-        <li><a href="{{ url_for('main.blog') }}">Блог</a></li>
-        <li><a href="{{ url_for('user.account') }}">Аккаунт</a></li>
-        <li><a href="{{ url_for('user.logout') }}">Выход</a></li>
-
-        <div class="online_status">
-            <div class="online_user"></div>
-            <div class="current_user"><small>{{ current_user.username }}</small></div>
-        </div>
-
-
-        {% else %}
-        <li><a href="{{ url_for('main.home') }}">Главная</a></li>
-        <li><a href="{{ url_for('user.register') }}">Регистрация</a></li>
-        <li><a href="{{ url_for('user.login') }}">Логин</a></li>
-
-
-        {% endif %}
-
-    </ul>
+<div class="form_search">
+    <form action="{{ url_for('posts.search')}}" method="GET" class="form_search_blog">
+        <div>
+        <input type="text" class="form-control" name="q" placeholder="Введите фразу для поиска">
+            </div>
+        <div class="input-group-append">
+        <input type="submit" class="btn_search" value="Поиск">
+         </div>
+    </form>
+</div>
 
 </header>
+
+
 {% endblock menu %}
 
 
@@ -97,7 +89,7 @@
 {% block footer %}
 
     <footer class="footer">Все права защищены!<br>
-        &#169; Терехов Михаил 2021
+        &#169; Androgen 2023
 
     </footer>
 
