--- a/blog/user/templates/user/reset_request.html
+++ b/blog/user/templates/user/reset_request.html
@@ -5,26 +5,26 @@
 <div class="login_form reset_pass">
     <form action="" method="POST">
 
-        {{ form.hidden_tag() }}
+        {{ form_reset.hidden_tag() }}
             <legend class="border-bottom mb-4">Сбросить пароль</legend>
 
             <div class="form-group">
-                {% if form.email.errors %}
-                {{ form.email(class='form-post-title is-invalid') }}
+                {% if form_reset.email.errors %}
+                {{ form_reset.email(class='form-post-title is-invalid') }}
                 <div class="invalid-feedback">
-                    {% for errors in form.email.errors %}
+                    {% for errors in form_reset.email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                    {{ form.email(class='form-post-title', placeholder='Емайл') }}
+                    {{ form_reset.email(class='form-post-title', placeholder='Емайл') }}
                 {% endif %}
             </div>
 
 
 
         <div class="form-group">
-            {{ form.submit(class='btn_log_in', style="width: auto; padding-right: 10px;") }}
+            {{ form_reset.submit(class='btn_log_in', style="width: auto; padding-right: 10px;") }}
         </div>
 
     </form>
