--- a/blog/user/templates/user/reset_token.html
+++ b/blog/user/templates/user/reset_token.html
@@ -5,40 +5,40 @@
 <div class="login_form reset_token">
     <form action="" method="POST">
 
-        {{ form.hidden_tag() }}
+        {{ form_reset_password.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Сбросить пароль</legend>
 
             <div class="form-group">
-                {% if form.password.errors %}
-                {{ form.password(class='form-control form-control-lg is-invalid', placeholder="Пароль") }}
+                {% if form_reset_password.password.errors %}
+                {{ form_reset_password.password(class='form-control form-control-lg is-invalid', placeholder="Пароль") }}
                 <div class="invalid-feedback">
-                    {% for errors in form.password.errors %}
+                    {% for errors in form_reset_password.password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                    {{ form.password(class='form-control form-control-lg', placeholder="Пароль") }}
+                    {{ form_reset_password.password(class='form-control form-control-lg', placeholder="Пароль") }}
                 {% endif %}
             </div>
             <br>
             <div class="form-group">
-                {% if form.confirm_password.errors %}
-                {{ form.confirm_password(class='form-control form-control-lg is-invalid', placeholder="Подтвердите пароль") }}
+                {% if form_reset_password.confirm_password.errors %}
+                {{ form_reset_password.confirm_password(class='form-control form-control-lg is-invalid', placeholder="Подтвердите пароль") }}
                 <div class="invalid-feedback">
-                    {% for errors in form.confirm_password.errors %}
+                    {% for errors in form_reset_password.confirm_password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                    {{ form.confirm_password(class='form-control form-control-lg', placeholder="Подтвердите пароль") }}
+                    {{ form_reset_password.confirm_password(class='form-control form-control-lg', placeholder="Подтвердите пароль") }}
                 {% endif %}
             </div>
 
         </fieldset>
 
         <div class="form-group">
-            {{ form.submit(class='btn_log_in') }}
+            {{ form_reset_password.submit(class='btn_log_in') }}
         </div>
 
     </form>
