--- a/blog/main/templates/main/index.html
+++ b/blog/main/templates/main/index.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
 
+
 {% block main_page %}
 
 <div class="wrapper">
-    <div class="empty_block"></div>
 
     <div class="cascade_block">
 
         <div class="cascade_menu">
-            <p class="info_name">Androgen - fullstack разработка</p>
+            <p class="info_name">Mike do IT - fullstack разработка</p>
 
             <div class="cascade_block_li">
                 <ul>
@@ -27,5 +27,3 @@
 </div>
 
 {% endblock main_page %}
-
-
