--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -15,6 +15,21 @@
   }
   
   
+  .alert{
+      background-color:white;
+      border-radius: 200px;
+      font-size: 16px;
+      color:green;
+      width: 60%;
+      margin: 5px auto ;
+      padding:7px 0;
+      text-align: center;
+      height:40px;
+      align-items: center;
+  
+  }
+  
+  
   /* Пустой блок, используется временно */
   .empty_block{
       height:30px;
@@ -23,9 +38,8 @@
   
   /* HEADER */
   .header {
-      height: 160px;
+      height: 140px;
       background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
-      padding-right: 50px;
   }
   
   
@@ -34,15 +48,16 @@
       width: 150px;
       justify-content: center;
       border-radius: 100px;
-      margin-top: 6%;
+      margin-top: 2%;
       box-shadow: 10px 10px 10px grey;
       font-size: 20px;
       height: 30px;
-  
   }
+  
+  
   .main_menu a{
-  text-decoration: none;
-  color: mediumaquamarine;
+      text-decoration: none;
+      color: mediumaquamarine;
   }
   
   
@@ -53,14 +68,15 @@
   
   
   /* LOGO */
-  .logo img {
+  .logo img{
       float: left;
       margin-left: 100px;
-      background-image: url("/img/ioA6tYaKRbU.jpg");
+      margin-top:10px;
       background-size: cover;
       background-repeat: no-repeat;
-      width: 200px;
-      box-shadow: 0px 0px 0px lightgreen;
+      width: 100px;
+      box-shadow: 10px 10px 10px 1px lightblue;
+      border-radius: 100px;
   }
   
   
@@ -68,6 +84,7 @@
   .main_menu{
       display: flex;
       justify-content: flex-end;
+      margin-right: 50px;
   }
   
   
@@ -75,7 +92,6 @@
   .wrapper{
       display: flex;
       flex-direction: column;
-  
   
   }
   
@@ -97,13 +113,38 @@
   }
   
   
+  .user_posts{
+      margin: 0 auto;
+      width:50%;
+  }
+  
+  
+  .user_info{
+      display: flex;
+      justify-content: flex-start;
+  }
+  
+  
+  .user_username_info{
+      align-self: center;
+      margin-left: 20px;
+      vertical-align: middle;
+  
+  }
+  
+  
+  .user_img_info img{
+      width:50px;
+  
+  }
+  
+  
   .info_name {
       box-shadow: -5px 15px 10px skyblue;
       border-radius: 200px;
       padding: 10px 20px;
       letter-spacing: 3px;
   }
-  
   
   
   .cascade_block_li {
@@ -159,8 +200,10 @@
   
   .update_info{
       text-align: center;
-      width: 300px;
+      width: 250px;
+      margin: 0 auto;
   }
+  
   
   
   /* LOGIN_FORM */
@@ -197,6 +240,7 @@
       margin-bottom: 20px;
   }
   
+  
   input,
   input[placeholder]{
       padding-left: 10px;
@@ -228,6 +272,7 @@
   
   }
   
+  
   .btn_sign_in{
       width: 120px;
       height: 30px;
@@ -246,6 +291,7 @@
   
   }
   
+  
   .create_post_btn{
       padding: 10px 20px;
       weight: 250px;
@@ -253,15 +299,14 @@
       background-color: white;
       margin-bottom: 20px;
   
-  
   }
+  
   
   .create_post_btn a{
       text-decoration:none;
       background-color: white;
   
   }
-  
   
   
   .form-group_button{
@@ -285,37 +330,143 @@
       margin: 50px auto 0;
   }
   
+  .tags{
+      display: flex;
+      justify-content: space-between;
+  }
   
-  .update_info{
-      text-align: center;
-      width: 300px;
+  
+  .delete_tag a{
+      color: red;
+      text-decoration: none;
+  }
+  
+  .list_posts{
+      width:60%;
+      font-size: 20px;
+      margin: 0 auto;
   
   }
   
   
+  .list_account_posts {
+      margin: 0 20px;
+      font-size: 16px;
+  }
+  
+  
+  .list_account_posts a{
+       font-size: 18px;
+       text-decoration: none;
+  }
+  
+  
+  .right_side{
+      text-align: center;
+      width: 250px;
+  
+  }
+  
+  
+  .height_form{
+      height: 10px;
+      font-size: 1em;
+  }
+  
+  
+  .post_stat_side{
+      display:flex;
+      justify-content: space-between;
+  }
+  
+  
+  .comment_side{
+      margin: 10px;
+      padding: 10px 0;
+  }
+  
+  
+  .single_comment{
+      border: solid lightgrey 1px;
+      border-top: none;
+      margin: 0 0px 20px;
+      padding: 5px 10px;
+  
+  }
+  
+  
+  .head_comment{
+      display:flex;
+      justify-content: space-between;
+  }
+  
+  
+  .left_comment_side{
+      margin-left: 10px;
+      font-size: 15px;
+  }
+  
+  
+  .right_comment_side{
+      margin-right: 10px;
+      font-size: 12px;
+  
+  }
+  
+  
+  .body_comment{
+      text-align:left;
+      margin: 10px 40px;
+      padding: 10px 40px;
+  }
+  
+  
+  .stat_comment{
+      display:flex;
+      justify-content: space-between;
+  }
+  
+  
+  .left_stat_side{
+      margin-left:20px;
+      font-size: 15px;
+  
+  }
+  
+  
+  .right_stat_side{
+      margin-right:40px;
+      font-size: 15px;
+  }
+  
+  
   .card{
+      margin: 0 auto;
       text-align: center;
       align-items: center;
-      width: 300px;
+      width: 230px;
       border :none;
   }
   
   
   .account-img{
-      width:200px;
-      border-radius: 50px;
+      width:100%;
+      border-radius: 40px;
+      margin-bottom: 10px;
   }
   
   
   .blog_content_area{
-  display: flex;
+      display: flex;
   }
+  
   
   .blog_content{
       width: 60%;
       text-align: center;
       margin: 40px auto;
   }
+  
   
   .info_posts_user h4{
       display: flex;
@@ -332,7 +483,6 @@
   }
   
   
-  
   .new_post,
   .log_in,
   .sign_in,
@@ -344,6 +494,7 @@
   
   }
   
+  
   .test{
       margin: 0 auto;
       outline: green 1px solid;
@@ -351,13 +502,14 @@
   
   }
   
+  
   .form-check{
       text-align: left;
   }
   
   
   .pad_top_card{
-      padding-top: 50px;
+      padding-top: 10px;
   }
   
   
@@ -372,8 +524,6 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 10px;
-  
-  
   }
   
   
@@ -382,7 +532,6 @@
       margin-left: 20px;
       margin-bottom: 30px;
       font-size: 14px;
-  
   }
   
   
@@ -391,6 +540,7 @@
       text-decoration: none;
   
   }
+  
   
   .info_user_blog_left img{
       outline: orange 1px solid;
@@ -427,15 +577,69 @@
   
   
   .online_status{
-      height: 30px;
       display: flex;
-      justify-content: center;
+      height: 30px;
+      justify-content: space-between;
       align-items: center;
-      margin-top: 20px;
+      margin-top: 25px;
+      margin-left: 20px;
+  
+  }
+  
+  .form_search{
+      color: red;
+      margin-right:40px;
+  
+  }
   
   
+  .form_search_blog{
+      display: flex;
+      justify-content: flex-end;
+  
+  }
   
   
+  .form_search_blog .form-control{
+      border-radius: 100px;
+      padding-left:20px;
+      width: 600px;
+      border: none;
+      box-shadow: 10px 10px 15px grey;
+  
+  }
+  
+  .posts_category_side{
+      text-align: center;
+      margin-top: 40px;
+      font-size: 30px;
+  
+  }
+  
+  .list_posts_category{
+      display:flex;
+      justify-content: center;
+      margin-top: 40px;
+  
+  }
+  
+  
+  .btn_search{
+      width: 150px;
+      border-radius: 100px;
+      font-size: 20px;
+      height: 32px;
+      margin-left: 20px;
+      color: mediumaquamarine;
+      background-color: #F5ED9B;
+      box-shadow: 10px 10px 15px grey;
+      border: none;
+  
+  }
+  
+  .btn_search:hover{
+      transition-duration: 0.5s;
+      box-shadow: 4px 5px 50px grey;
   }
   
   
@@ -448,10 +652,7 @@
       text-align: right;
       box-shadow: 0px 0px 20px 3px green;
   
-  
-  
   }
-  
   
   
   .current_user{
@@ -460,13 +661,39 @@
       margin-left: 10px;
       align-self: center;
   
-  
-  
   }
+  
   
   .current_user small{
       font-style: cursive;
       color: blue;
       font-size: 16px;
+  
+  }
+  
+  
+  .video_grid{
+      display:flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin: 40px auto 0;
+      align-items: center;
+  
+  }
+  
+  
+  .single_cell {
+      width: 30%;
+      margin:20px;
+      align-items: self;
+      text-align: center;
+  
+  }
+  
+  .single_cell iframe{
+          width:100%;
+          height:250px;
+          border-radius: 60px;
+          box-shadow: 20px 10px 10px 0px grey;
   
   }
